Fix checkbox appearance on Firefox

--- a/ui/client/stylesheets/graph.styl
+++ b/ui/client/stylesheets/graph.styl
@@ -59,6 +59,8 @@ espCheckbox(checkboxWidth)
     display block
     position relative
     cursor pointer
+    -moz-appearance: none
+    border none
 
   input[type='checkbox']:after
     content ""
